# Pepperwood

./: .coderabbit.yaml  .gitignore  .ignore  LICENSE  README.md  SensorDataIngest.py  ingest_installer.iss  pyproject.toml  requirements.txt
SensorDataIngest/: __init__.py  callbacks.py  column_metadata.csv  config.py  helpers.py  ingest.cfg  ingest.py  ingest.spec  ingest.toml  ingest_metadata.xlsx  layout.py  make_exe.bat  make_exe.ps1  sensor_data_ingest.py  site_metadata.csv
SensorDataIngest/sensor_data_ingest/: __init__.py  callbacks.py  config.py  helpers.py
SensorDataIngest/test_files/: good_data.xlsx
SensorDataIngest/tests/: test_config.py  test_helpers.py  testconfig.py
