[project]
name = "pepperwood"
version = "0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==3.1.1",
    "dash-bootstrap-components==1.6.0",
    "dash-extensions==2.0.4",
    "dash-mantine-components==2.1.0",
    "decorator==5.2.1",
    "openpyxl==3.1.5",
    "pandas==2.3.1",
    "plotly==6.2.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pytest>=8.4.2",
    "tomli-w>=1.2.0",
    "xlsxwriter==3.2.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# extend-select = ["ALL"]
pydocstyle.convention = "google"
flake8-quotes.inline-quotes = "single"
[tool.ruff.format]
quote-style = "single"
