[project]
name = "pepperwood"
version = "0.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==3.2.0",
    "dash-bootstrap-components==2.0.4",
    "dash-extensions==2.0.4",
    "dash-mantine-components==2.3.0",
    "decorator==5.2.1",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "plotly==6.4.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "tomli-w>=1.2.0",
    "xlsxwriter==3.2.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# extend-select = ["ALL"]
pydocstyle.convention = "google"
flake8-quotes.inline-quotes = "single"
[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
